<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="units">Units</string>
    <string name="search_hint">Enter your city</string>
    <string name="current_location">Current location</string>


    <string name="celsius_unit">ºC</string>
    <string name="fahrenheit_unit">ºF</string>

    <string name="key_unit">unit</string>
    <string name="key_location">location</string>
    <string name="key_api_key">api_key</string>
    <string name="key_is_first_run">first_run</string>
    <string name="key_last_location">last_location</string>

    <string name="unit_summary">%s</string>

    <!--Error messages-->
    <string name="error_no_internet">No internet connection! Weather information may be outdated!</string>
    <string name="error_getting_data">Error getting data from OpenWeather</string>

    <!--Unit Strings-->
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="pressure_unit">hPa</string>
    <string name="humidity_unit">%</string>

    <!--Layout Strings-->
    <string name="high_txt">High: </string>
    <string name="low_txt">Low: </string>
    <string name="pressure_txt">Pressure: </string>
    <string name="humidity_txt">Humidity: </string>
</resources>
